# bigname

./: .env.example  .env.server.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX_BOT_CHECK.md  Cargo.toml  Dockerfile  README.md  diff.patch  docker-compose.public.yml  docker-compose.reth-db.yml  docker-compose.server.yml  docker-compose.yml
apps/api/: Cargo.toml
apps/api/src/: bounds.rs  cli.rs  errors.rs  handlers.rs  main.rs  openapi.rs  pagination.rs  query.rs  responses.rs  routes.rs  state.rs  status_freshness.rs  support.rs  tests.rs  types.rs
apps/api/src/bounds/: classification.rs  tests.rs
apps/api/src/graphql/: convert.rs  enums.rs  error.rs  http.rs  inputs.rs  loader.rs  mod.rs  objects.rs  query.rs  schema.rs
apps/api/src/handlers/: collections.rs  exact_name.rs  gas_sponsorship.rs  health.rs  history.rs  namespaces.rs  permissions_support.rs  primary_names.rs  resolution.rs  resolution_explain.rs  resolution_on_demand.rs  resolvers.rs
apps/api/src/openapi/: app_facing_parameters.rs  docs.html  parameters.rs  responses.rs  route_operations.rs  schemas.rs  server.rs
apps/api/src/responses/: collections.rs  collections_children.rs  history.rs  json.rs  namespaces.rs  projections.rs  resolution.rs  resolution_primary_name_coverage.rs  resolution_verified.rs
apps/api/src/routes/: parameters.rs
apps/api/src/status_freshness/: tests.rs
apps/api/src/support/: cursors.rs  history.rs  primary_name_execution.rs  primary_name_lookup.rs  primary_name_readback.rs  primary_name_readback_fence.rs  primary_name_rpc.rs  query_parsing.rs  record_json.rs  records.rs  service.rs  snapshots.rs
apps/api/src/tests/: collections.rs  events.rs  exact_name.rs  gas_sponsorship.rs  graphql.rs  history.rs  identity.rs  names_collection.rs  namespaces.rs  openapi.rs  primary_names.rs  records.rs  resolution.rs  resolvers.rs  roles.rs  support.rs  v2_address_names.rs  v2_diag_events.rs  v2_diagnostics_names.rs  v2_envelope_conformance.rs  v2_history.rs  v2_lookup.rs  v2_name_record.rs  v2_permissions.rs  v2_primary_name.rs  v2_query_params.rs  v2_resolvers.rs
apps/api/src/types/: health.rs
apps/api/src/v2/: address_history.rs  address_names.rs  chains.rs  cursor.rs  diag_events.rs  diag_namespace_manifests.rs  envelope.rs  error.rs  events.rs  history.rs  mod.rs  name_record.rs  name_records.rs  name_records_inventory.rs  namespaces.rs  params.rs  permission_support.rs  permissions.rs  primary_name.rs  resolvers.rs  router.rs  snapshots.rs  status.rs  subnames.rs  vocab.rs
apps/indexer/: Cargo.toml
apps/indexer/src/: main.rs  provider.rs
apps/indexer/src/main/: backfill.rs  basenames_registry.rs  bootstrap_backfill.rs  cli.rs  drop_rederive.rs  ens_v1_resolver.rs  healthcheck.rs  normalized_replay_catchup.rs  ops_catchup.rs  provider_configuration.rs  reconciliation.rs  repair.rs  replay.rs  resolver_profile_convergence.rs  rewind.rs  run.rs  run_mode.rs  runtime.rs  source_scope.rs  startup_heartbeat.rs  tests.rs
apps/indexer/src/provider/: block_transaction.rs  code.rs  decode.rs  error.rs  http_client.rs  logs_receipts.rs  payload_cache.rs  pool_recovery_tests.rs  proof.rs  request.rs  tests.rs  transaction_receipts.rs  types.rs
apps/worker/: Cargo.toml
apps/worker/src/: address_names.rs  automatic_projection_replay.rs  children.rs  cli.rs  commands.rs  evm.rs  execution.rs  gas_sponsorship.rs  healthcheck.rs  inspect.rs  main.rs  main_tests.rs  manifest_drift.rs  name_current.rs  permissions.rs  primary_name.rs  projection_apply.rs  projection_json.rs  raw_facts.rs  rebuild_heartbeat.rs  record_inventory.rs  replay.rs  resolver.rs  runtime.rs  staged_rebuild.rs
apps/worker/src/address_names/: cleanup.rs  constants.rs  load.rs  model.rs  positions.rs  projection.rs  rebuild.rs  relations.rs  source_policy.rs  tests.rs  util.rs
apps/worker/src/automatic_projection_replay/: bootstrap_attempt.rs  bootstrap_replay.rs  heartbeat.rs  invalidation_derive_loop.rs  manual_replay.rs  primary_hydration.rs  primary_hydration_loop.rs  (+4 more)
crates/adapters/: Cargo.toml
crates/adapters/examples/: sync_ens_v1_unwrapped_authority_block_hashes.rs  sync_resolver_once.rs
crates/adapters/src/: adapter_manifest.rs  block_derived_normalized_events.rs  checkpoint_codec.rs  checkpoint_context.rs  ens_v1_reverse_claim.rs  ens_v1_subregistry_discovery.rs  ens_v1_unwrapped_authority.rs  ens_v2_common.rs  ens_v2_permissions.rs  ens_v2_registrar.rs  ens_v2_registry.rs  ens_v2_resolver.rs  entrypoint_user_operation.rs  evm_abi.rs  lib.rs  manifest_normalized_events.rs  normalized_event_support.rs  normalized_replay_policy.rs  registry_migration_cache.rs  startup_progress.rs
crates/execution/: Cargo.toml
crates/execution/src/: ens_primary_name.rs  ens_resolution.rs  ens_resolution_abi.rs  ens_resolution_call.rs  ens_resolution_ccip.rs  ens_reverse_names.rs  ens_text_records.rs  json_helpers.rs  lib.rs  persistence.rs  primary_name.rs  revalidation.rs  rpc.rs  sql_row.rs  tests.rs
crates/manifests/: Cargo.toml
crates/manifests/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: address_names.rs  audit.rs  backfill_jobs.rs  base_normalized_rederive.rs  checkpoints.rs  children.rs  connection.rs  data_completeness.rs  evm_primitives.rs  execution.rs  gas_sponsorship.rs  history.rs  identity.rs  label_preimages.rs  lib.rs  lineage.rs  long_operation_exports.rs  migration_indexes.rs  name_current.rs  normalized_events.rs  permissions.rs  primary_name.rs  projection_helpers.rs  projection_staging.rs  raw.rs  raw_calls.rs  raw_children.rs  raw_code.rs  raw_payload_cache.rs  raw_staging_revision.rs  raw_transaction_inputs.rs  record_inventory.rs  resolution_support.rs  resolver.rs  resolver_profile_authority_journal.rs  resolver_profile_input_changes.rs  service_heartbeats.rs  snapshot_selection.rs  stored_lineage_coverage.rs  time.rs  (+1 more)
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs  test_hook_registry.rs
tests/conformance/: Cargo.toml  README.md  build.rs
tests/conformance/src/: lib.rs
tests/e2e/: Cargo.toml  README.md
tests/e2e/src/: lib.rs
(+1283 files in other folders)
