[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/indexer",
    "apps/worker",
    "crates/domain",
    "crates/storage",
    "crates/manifests",
    "crates/adapters",
    "crates/execution",
    "crates/test-support",
]
default-members = [
    "apps/api",
    "apps/indexer",
    "apps/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"

[workspace.dependencies]
alloy-consensus = "2.0.1"
alloy-json-rpc = "2.0.1"
alloy-json-abi = "1.5.7"
alloy-primitives = "1.5.7"
alloy-rpc-types-eth = "2.0.1"
alloy-sol-types = "1.5.7"
alloy-transport-http = { version = "2.0.1", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
anyhow = "1.0.100"
async-graphql = { version = "7", default-features = false, features = ["graphiql", "dataloader"] }
async-graphql-axum = "7"
axum = { version = "0.8.6", features = ["http1", "json", "tokio"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
ens-normalize = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3.31"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

bigname-adapters = { path = "crates/adapters" }
bigname-domain = { path = "crates/domain" }
bigname-execution = { path = "crates/execution" }
bigname-manifests = { path = "crates/manifests" }
bigname-storage = { path = "crates/storage" }
bigname-test-support = { path = "crates/test-support" }
