[package]
name = "bigname-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
hex = "0.4.3"
serde.workspace = true
serde_json = "1.0.145"
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

bigname-domain.workspace = true
bigname-execution.workspace = true
bigname-manifests.workspace = true
bigname-storage.workspace = true

[dev-dependencies]
bigname-test-support.workspace = true
futures-util.workspace = true
tower = { version = "0.5.2", features = ["util"] }
