[package]
name = "bigname-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
clap.workspace = true
form_urlencoded = "1.2.2"
hex = "0.4.3"
serde.workspace = true
serde_json = "1.0.145"
sqlx.workspace = true
tokio.workspace = true
tower = { version = "0.5.2", features = ["limit", "load-shed", "timeout", "util"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true

bigname-domain.workspace = true
bigname-execution.workspace = true
bigname-manifests.workspace = true
bigname-storage.workspace = true

[dev-dependencies]
alloy-sol-types.workspace = true
bigname-test-support.workspace = true
futures-util.workspace = true
