[package]
name = "bigname-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
reth-db = ["dep:reth-ethereum"]

[dependencies]
alloy-consensus.workspace = true
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
anyhow.workspace = true
bytes = "1.10.1"
clap.workspace = true
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde.workspace = true
serde_json = "1.0.149"
sqlx.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false, features = ["std", "node"], optional = true }

bigname-adapters.workspace = true
bigname-domain.workspace = true
bigname-manifests.workspace = true
bigname-storage.workspace = true
