[package]
name = "bigname-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

bigname-adapters.workspace = true
bigname-domain.workspace = true
bigname-execution.workspace = true
bigname-manifests.workspace = true
bigname-storage.workspace = true
serde_json = "1.0.149"

[dev-dependencies]
bigname-test-support.workspace = true
