[package]
name = "bigname-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
bigname-manifests = { workspace = true }
bigname-storage = { workspace = true }
futures-util = "0.3.31"
serde_json = "1.0.145"
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
