[package]
name = "bigname-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
bigname-domain = { workspace = true }
bigname-manifests = { workspace = true }
bigname-storage = { workspace = true }
futures-util = "0.3.31"
serde.workspace = true
serde_json = { version = "1.0.145", features = ["raw_value"] }
sqlx.workspace = true
time = { version = "0.3.47", features = ["serde"] }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
