[package]
name = "bigname-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-json-rpc = "2.0.1"
alloy-primitives = "1.5.7"
alloy-sol-types = "1.5.7"
alloy-transport-http = { version = "2.0.1", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
anyhow.workspace = true
bigname-storage.workspace = true
futures-util.workspace = true
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde.workspace = true
serde_json = "1.0.149"
sqlx = { workspace = true, features = ["time"] }
tower = { version = "0.5.2", default-features = false }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
