[package]
name = "bigname-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-transport-http.workspace = true
anyhow.workspace = true
bigname-domain.workspace = true
bigname-storage.workspace = true
futures-util.workspace = true
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde.workspace = true
serde_json = "1.0.149"
sqlx = { workspace = true, features = ["time"] }
tower = { version = "0.5.2", default-features = false }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
