[package]
name = "bigname-manifests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0.145"
sqlx.workspace = true
toml = "0.8.23"
uuid.workspace = true

[dev-dependencies]
bigname-storage.workspace = true
tokio.workspace = true
