[package]
name = "bigname-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
serde_json = "1.0.149"
sqlx = { workspace = true, features = ["time"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
bigname-test-support.workspace = true
tokio.workspace = true
