[package]
name = "bigname-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json = "1.0.149"
sqlx = { workspace = true, features = ["time"] }
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
uuid.workspace = true

bigname-domain.workspace = true

[dev-dependencies]
bigname-test-support.workspace = true
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
syn = { version = "2.0.117", features = ["full", "visit"] }
tokio.workspace = true
