[package]
name = "bigname-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
sqlx.workspace = true

bigname-storage.workspace = true

[dev-dependencies]
tokio.workspace = true
