[package]
name = "bigname-supported-read-conformance"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
alloy-primitives = "1.5.7"
async-graphql = { version = "7", default-features = false, features = ["graphiql", "dataloader"] }
async-graphql-axum = "7"
axum = { version = "0.8.6", features = ["http1", "json", "tokio"] }
bigname-domain = { path = "../../crates/domain" }
bigname-execution = { path = "../../crates/execution" }
bigname-manifests = { path = "../../crates/manifests" }
bigname-storage = { path = "../../crates/storage" }
clap = { version = "4.5.49", features = ["derive", "env"] }
form_urlencoded = "1.2.2"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["limit", "load-shed", "timeout", "util"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
bigname-test-support = { path = "../../crates/test-support" }

[workspace]
