[package]
name = "bigname-e2e"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"

[dependencies]
alloy-primitives = { version = "1.5.7", features = ["serde"] }
alloy-sol-types = "1.5.7"
anyhow = "1.0.100"
bigname-storage = { path = "../../crates/storage" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"

[workspace]
